# PINN-for-PIV

./: .gitignore  README.md  conftest.py  process_case.py  pyproject.toml  requirements.txt  run_training.py
src/data/: __init__.py  data_parser.py
src/geometry/: __init__.py  geometry.py
src/network/: __init__.py  pinn_model.py
src/postprocess/: __init__.py  exporter.py
src/training/: __init__.py  trainer.py
tests/: test_data_parser.py  test_exporter.py  test_geometry.py  test_network.py  test_trainer.py
